syntax = "proto2";

package tv_service;

option go_package = "gitlab.sweet.tv/proto/tv_service";

message Category {
    required int32 id = 1;
    required string caption = 2;
    optional bytes icon = 3;
    optional int32 order = 4;
    optional string icon_url = 5;
}