syntax = "proto2";

package tv_service;

option go_package = "gitlab.sweet.tv/proto/tv_service";

message Record {
  required int32 channel_id = 1;
  optional int32 epg_id = 2;
  optional string title = 3;
  optional bool available = 4 [ default = true ];
  repeated int32 tariffs = 5;
  optional string image_url = 6;
}

message TvShow {
  required int32 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string last_show_date = 4;
  optional int32 production_year = 5;
  optional int32 duration = 6;
  optional int32 age_limit = 7;
  optional float rating = 8;
  optional string poster_url = 9;
  optional string banner_url = 10;
  repeated int32 genres = 11;
  repeated int32 people = 12;
  optional string slug = 13;
  optional string trailer_url = 14;
  repeated Record records = 15;
}


message GetTvShowInfoRequest {
  repeated int32 tv_shows = 1;
  optional int32 offset = 2 [default = 0];
  optional int32 limit = 3 [default = 0];
}

message GetTvShowInfoResponse {
  repeated TvShow tv_shows = 2;
}